# Smart_Groceries

./: pyproject.toml  readme.md
code/: carrefour.py  export_yaml.py  main.py  superu.py
code/user_data/: Local State
code/user_data/Default/: DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
code/user_data/Default/DawnGraphiteCache/: data_1  index
code/user_data/Default/DawnWebGPUCache/: data_1  index
code/user_data/Default/Extension Rules/: LOG
code/user_data/Default/Extension Scripts/: LOG
code/user_data/Default/Extension State/: LOG  LOG.old
code/user_data/Default/GCM Store/: LOG  (+1 more)
code/user_data/GrShaderCache/: data_0  data_1  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000d  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  index
code/user_data/GraphiteDawnCache/: data_1  index
code/user_data/ShaderCache/: data_1  index
code/user_data/segmentation_platform/: ukm_db
code/user_data_superu/: Last Browser  Local State
code/user_data_superu/Default/: DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
code/user_data_superu/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000c  f_00000e  index
code/user_data_superu/GraphiteDawnCache/: data_1  index
code/user_data_superu/ShaderCache/: data_1  index
code/user_data_superu/segmentation_platform/: ukm_db
data/: resume.yaml  resume_carrefour.yaml  resume_superu.yaml
(+495 files in other folders)
