[project]
name = "web-scrapping"
version = "0.1.0"
description = "Scraper Carrefour"
authors = [{name="Pierre Dauguet"}]
requires-python = ">=3.10"

dependencies = [
    "playwright==1.58.0",
    "PyYAML==6.0.3",
    "pyee==13.0.1",
    "greenlet==3.3.2",
    "typing_extensions==4.15.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["code*"]
exclude = ["data*"]